# justatuner

./: .gitignore  CLAUDE.md  README.md  TODO.md  audio_utils.py  build.py  config.py  installer.iss  main.py  release_notes_v0.9.0.md  release_notes_v1.0.0.md  release_notes_v1.1.0.md  release_notes_v1.1.1.md  release_notes_v1.1.2.md  requirements.txt  user_guide.py
.claude/commands/: initbig.md
.github/workflows/: build.yml
exerciser/: __init__.py  engine.py  intervals.py  pitch.py  view.py  widgets.py
tuner/: __init__.py  engine.py  view.py
tuner_renderer/: Cargo.toml  pyproject.toml
tuner_renderer/src/: lib.rs  platform.rs  renderer.rs  shader.wgsl
